assets/scss/_dark-mode.scss
html {
  &.is-dark-mode-active {
    background-color: $dark-mode-background-color;

    .navbar {
      // background: $dark-mode-background-color !important;

      // box-shadow: 0 1px #000 !important;
    }
    &.has-boxed-layout {
      //background-color: $dark-mode-html-boxed-background-color;
    }
    input.has-text-black{
      &.has-background-white{
        color: black !important;
      }
    }

    .loading-overlay .loading-background {
      background: rgba($dark-mode-light-border-color, .125);
    }

    .modal {
      .modal-background {
        background-color: $dark-mode-overlay-background-color
      }
      .modal-card-title {
        color: $dark-mode-color;
      }
      .modal-card-head, .modal-card-body, .modal-card-foot {
        background-color: $dark-mode-background-color;
        border-color: $dark-mode-light-border-color;
      }
    }

    .modal-close {
      &:before, &:after {
        background-color: $dark-mode-color;
      }
    }

    .card {
      background: $dark-mode-background-color;
      .card-header {
        .button {
          border-color: $dark-mode-card-header-button-color!important;
          color: $dark-mode-card-header-button-color;

          &:hover {
            background-color: $dark-mode-card-header-button-color;
            color: $dark-mode-card-header-button-hover-color;
          }
        }
      }
    }

    .progress {
      &::-webkit-progress-bar {
        background-color: $grey-dark;
      }
    }

    .button {
      background-color: transparent;
      border-color: $dark-mode-button-color!important;
      color: $dark-mode-button-color!important;

      &:hover:not([disabled]) {
        background-color: $dark-mode-button-color;
        color: $dark-mode-button-hover-color!important;
      }

      @each $state-class, $state-color, $state-text in $state-colors {
        &.is-#{$state-class} {
          border-color: $state-color!important;
          color: $state-color!important;

          &:hover {
            background-color: $state-color;
            color: $state-text;
          }
        }
      }
    }

    .select select:focus, .textarea:focus, .input:focus, .taginput .taginput-container.is-focusable:focus, .select select.is-focused, .is-focused.textarea, .is-focused.input, .taginput .is-focused.taginput-container.is-focusable, .select select:active, .textarea:active, .input:active, .taginput .taginput-container.is-focusable:active, .select select.is-active, .is-active.textarea, .is-active.input, .taginput .is-active.taginput-container.is-focusable {
      border-color: $cyan;
    }
    .tag.is-dark {
      background: $black !important;
      color: white !important;
    }
    .has-text-warning-dark{
      color: $warning !important;
    }

    .filterBar.has-background-white {
      background: $black !important;
    }

    .radio, .checkbox {
      &:hover {
        color: $dark-mode-color;
      }
    }

    .label {
      color: $grey-lighter;
    }

    .input, .textarea, .select select {
      color: $dark-mode-color;
      background-color: transparent;

      &::placeholder {
        color: $grey-light;
      }
    }

    .select {
      &:not(.is-multiple):not(.is-loading)::after {
        border-color: $dark-mode-color;
      }
      select {
        color: $dark-mode-color;
      }
    }

    .switch input[type=checkbox] + .check {
      border: $dark-mode-border;

      &:before {
        border-color: $white;
      }
    }

    .b-checkbox.checkbox input[type=checkbox], .b-radio.radio input[type=radio] {
      &+.check {
        border: $dark-mode-border!important;
      }
    }

    .b-slider .b-slider-thumb-wrapper .b-slider-thumb {
      background: $dark-mode-background-color;
    }

    .upload .upload-draggable {
      border-color: $grey-light;

      &:hover {
        border-color: $dark-mode-border-color;
        background-color: transparent;
      }
    }

    .notification {
      @each $state-class, $state-color, $state-text in $state-colors {
        &.is-#{$state-class} {
          background-color: transparent;
          border: 1px solid $state-color;
          color: $state-color;

          .button {
            border-color: $state-color!important;
            color: $state-color!important;

            &:hover {
              background-color: $state-color;
              color: $state-text!important;
            }
          }
        }
      }
    }

    .tag {
      &.is-delete {
        background-color: $grey-dark;
      }

      @each $state-class, $state-color, $state-text in $state-colors {
        &.is-#{$state-class} {
          background-color: transparent;
          border: 1px solid $state-color;
          color: $state-color;
        }
      }
      &.is-dark {
        background-color: $white;
        border: none;
        color: $black;
      }
    }

    .is-dark {
      background-color: $white;
      border: none;
      color: $black;
    }
    .has-text-black{
      color: white !important;
    }

    .is-light {
      background-color: rgba($black, 0.25);
      border: none;
      color: $white;
    }
    .has-background-light,  .message{
      background-color: rgba($black, 0.25) !important;
    }
    .table {
      background-color: transparent;
      color: $dark-mode-color;

      thead {
        td, th {
          color: $dark-mode-color;
        }
      }

      td, th {
        border-color: $dark-mode-light-border-color;

      }
      th {
        background: $black !important;
      }

      &.is-hoverable.is-striped tbody tr:not(.is-selected):hover {
        background-color: darken($dark-mode-light-border-color,8%);

        &:nth-child(even) {
          background-color: darken($grey-dark,8%);
        }
      }

      &.is-striped tbody tr:not(.is-selected):nth-child(even) {
        background-color: darken($dark-mode-light-border-color,8%);
      }
    }

    .b-table .table-wrapper + .level {
      background-color: transparent;
      border-color: $dark-mode-light-border-color;

      .pagination-link {
        background-color: transparent;
        color: $grey;
        border-color: $grey;

        &:hover:not(.is-current):not([disabled]) {
          color: $grey-lighter;
          border-color: $grey-lighter;
        }

        &.is-current {
          color: $dark-mode-color;
          border-color: $dark-mode-border-color;
        }
      }
    }

    .title {
      color: $grey-lighter;
    }

    .subtitle {
      color: $grey-lighter;
    }

    body {
      color: $grey-lighter;
    }

    strong {
      color: $dark-mode-color;
    }

    hr {
      background-color: $dark-mode-light-border-color;
    }

    a {
      color: $dark-mode-link-color;
    }

    .media {
      border-color: $dark-mode-light-border-color;
    }



    nav.navbar {
      background-color: $white;

      .navbar-item {
        color: $dark-mode-link-color;

        .navbar-link {
          color: $dark-mode-link-color;
        }

        .input {
          color: $dark-mode-color;

          &::placeholder {
            color: $grey-light;
          }
        }

        &.has-divider {
          border-color: transparent !important;
        }

        &.is-active {
          color: $dark-mode-link-active-color;
        }
      }
    }

    .navbar-dropdown {
      background-color: $dark-mode-background-color;

      .navbar-item:hover {
        color: $dark-mode-color;
      }
    }

    aside.aside {
      background-color: $black;
      box-shadow: 1px 0 $dark-mode-light-border-color!important;

      .aside-tools {
        color: $dark-mode-color;
        box-shadow: none !important;
        // box-shadow: 0 1px $dark-mode-light-border-color;

        .aside-close {
          color: $dark-mode-color;
        }
      }

      &.is-placed-right {
        box-shadow: -1px 0 $dark-mode-light-border-color!important;
      }

      &.is-secondary, &.is-expanded {
        .aside-tools {
          box-shadow: 0 1px $dark-mode-light-border-color;
        }
      }

      &.is-secondary {
        .aside-tools {
          background-color: transparent;
        }
      }

      .menu-list li.is-active {
        box-shadow: 0 1px $dark-mode-light-border-color;

        >a {
          box-shadow: 0 1px $dark-mode-light-border-color;
        }
      }
    }

    .menu-list a {
      &.is-active {
        color: $dark-mode-link-active-color;
      }
      &:hover {
        color: $dark-mode-link-hover-color;
      }
    }

    .card {
      border-color: $dark-mode-light-border-color;
      color: $grey-lighter;

      .card-header {
        border-color: $dark-mode-light-border-color;
      }

      .card-header-title {
        color: $grey-lighter;
      }

      .card-footer {
        border-color: $dark-mode-light-border-color;
      }

      .is-widget-label {
        .subtitle {
          color: $grey-light;
        }
      }

      .notification {
        background-color: $dark-mode-light-border-color;
        color: $grey-lighter;

        &.is-card-toolbar {
          border-color: $dark-mode-light-border-color;
          background-color: $dark-mode-background-color;
        }
      }
    }

    section {
      &.section.is-title-bar, &.hero.is-hero-bar {
        border-color: $dark-mode-light-border-color;
      }

      &.section.is-title-bar {
        ul li {
          color: $grey-light;

          &:last-child {
            color: $grey-lighter;
          }
        }
      }
    }

    footer.footer {
      border-color: $dark-mode-light-border-color;

      .logo svg path {
        fill: $dark-mode-color;
      }
    }

    .error-page-icon {
      .icon {
        background-color: $dark-mode-light-border-color;
      }
    }

    .ui-overlay {
      background-color: $dark-mode-overlay-background-color;
    }

    .container.has-boxed-layout {
      background: $dark-mode-container-boxed-background-color;
      border-left: $dark-mode-light-border;
      border-right: $dark-mode-light-border;
    }

    .ps__thumb-x, .ps__thumb-y {
      background-color: $grey-dark;
    }

    .ps__rail-x:hover > .ps__thumb-x,
    .ps__rail-x:focus > .ps__thumb-x,
    .ps__rail-x.ps--clicking .ps__thumb-x {
      background-color: $grey-dark;
    }

    .ps__rail-y:hover > .ps__thumb-y,
    .ps__rail-y:focus > .ps__thumb-y,
    .ps__rail-y.ps--clicking .ps__thumb-y {
      background-color: $grey-dark;
    }

    .config-box {
      background-color: $grey-dark;
    }
  }
}

@include touch {
  html.is-dark-mode-active {

    .table-wrapper.has-mobile-cards {
      tr:not(.detail):not(.is-empty):not(.table-footer) {
        td {
          border-bottom-color: $dark-mode-light-border-color;
        }
      }
    }

    aside.aside.is-secondary {
      border-color: $dark-mode-light-border-color!important;
    }

    .navbar-menu {
      background-color: $dark-mode-background-color;
      box-shadow: 0 8px 16px rgba($black, 0.25);

      .navbar-item {
        &.has-dropdown {
          >.navbar-link {
            border-color: $dark-mode-light-border-color;
          }
        }
      }
    }
  }
}

@include desktop {
  html.is-dark-mode-active {
    .navbar-dropdown {
      border-color: $dark-mode-light-border-color;
      box-shadow: 0 8px 8px rgba($black, 0.25);
    }
  }
}

@include until-widescreen {
  html.is-dark-mode-active {
    aside.aside {
      .aside-tools {
        box-shadow: 0 1px $dark-mode-light-border-color;
      }
    }
  }
}

